# graphrag_webui

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.manage  Dockerfile.test  FAQ&智能诊断数据样例240126(1).csv  Makefile  README.md  app_api.py  app_manage.py  app_test.py  cli.py  config.yaml.example  deploy.sh  deploy_api.sh  deploy_manage.sh  deploy_test.sh  dev.sh  docker-compose.yaml  docker_prune.sh  file_processor.py  file_processor2.py  nginx.conf  pyproject.toml  requirements.txt  service.sh  service_log.sh  setup.py  start.sh  token_analyzer.py  update.sh
.streamlit/: config.toml
cli/: blob.py  build_index.py  cli_types.py  common.py  create_project.py  generate_data.py  index_preview.py  logger.py  main.py  pdf_txt.py  prompt_tuning.py  types.py  upload_file.py
libs/: azure_ai_search.py  blob.py  build_index.py  candidate_questions.py  common.py  config.py  consts.py  create_project.py  find_sources.py  generate_data.py  gtypes.py  index_preview.py  pdf_txt.py  pgvector.py  print_progress.py  progress.py  projects_manage.py  prompt_tuning.py  render_context.py  render_excel.py  save_env.py  save_settings.py  search.py  store_vector.py  upload_file.py
template/: .env  default.yaml  setting.yaml  setting_ai_search.yaml  setting_ai_search_cli.yaml  setting_lancedb.yaml  test_set.xlsx
